<resources>
    <string name="app_name">AndroidMaster</string>

    <string name="female">Mujer</string>
    <string name="male">Hombre</string>
    <string name="height">Altura</string>
    <string name="weight">Peso</string>
    <string name="calculate">Calcular</string>
    <string name="recalculate">Recalcular</string>
    <string name="error">ERROR</string>
    <string name="underweight">Peso Bajo</string>
    <string name="normal_weight">Peso Normal</string>
    <string name="overweight">Sobrepeso</string>
    <string name="obesity">Obesidad</string>
    <string name="description_underweight">Tienes el peso por debajo de lo normal para tu peso y altura.</string>
    <string name="description_normal_weight">Estas en el peso ideal para tu peso y altura, sigue asi!</string>
    <string name="description_overweight">Tienes el peso mas arriba de lo normal para tu peso y altura.</string>
    <string name="description_obese">Tienes el peso muy por encima de lo normal para tu peso y altura.</string>

    <string name="todo_title">Bienvenido, Aris!</string>
    <string name="todo_categories">Categorias</string>
    <string name="todo_tasks">Tareas</string>
    <string name="todo_add_task">Añade la tarea</string>
    <string name="todo_create_task">Crear tarea</string>
    <string name="todo_categories_title">Categoría:</string>
    <string name="todo_task_title">Tarea:</string>
    <string name="todo_business">Negocios</string>
    <string name="todo_personal">Personal</string>
    <string name="todo_other">Otros</string>
</resources>