<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="280dp"
    android:layout_height="wrap_content"
    android:background="@color/todo_background_app"
    android:orientation="vertical"
    android:padding="32dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/todo_task_title"
        android:textColor="@color/white"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/etTask"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:hint="@string/todo_add_task"
        android:textColor="@color/white"
        android:textColorHint="@color/todo_subtitle_text" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/todo_categories_title"
        android:textColor="@color/white"
        android:textSize="18sp" />

    <RadioGroup
        android:id="@+id/rgCategories"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/rdBusiness"
            style="@style/TodoRadioButton"
            android:buttonTint="@color/todo_business_category"
            android:checked="true"
            android:text="@string/todo_business" />

        <RadioButton
            android:id="@+id/rdPersonal"
            style="@style/TodoRadioButton"
            android:buttonTint="@color/todo_personal_category"
            android:text="@string/todo_personal" />

        <RadioButton
            android:id="@+id/rdOther"
            style="@style/TodoRadioButton"
            android:buttonTint="@color/todo_other_category"
            android:text="@string/todo_other" />

    </RadioGroup>

    <Button
        android:id="@+id/btnAddTask"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/todo_accent"
        android:text="@string/todo_create_task" />
</LinearLayout>